fixes image stretching on image modal

--- a/src/blocks/photoessay/_bu-blocks-block-photoessay-base.scss
+++ b/src/blocks/photoessay/_bu-blocks-block-photoessay-base.scss
@@ -355,8 +355,7 @@ $photo-padding-xl: $padding/2 !default;
 		img {
 			@include transition( opacity 250ms ease-in-out 250ms, transform 250ms ease-in-out 0ms );
 			@include transform( scale(0.1) );
-			@include box-shadow( 0 0 15px 0 rgba(0, 0, 0, 0.25) );
-			border: 1px solid rgba(255,255,255, 0.10);
+			filter: drop-shadow( 0px 0px 1px rgba( 255, 255, 255, 0.5 ) ) drop-shadow( 0px 0px 15px rgba( 0, 0, 0, 0.25 ) );
 			flex: 0 1 auto;
 			height: 100%;
 			margin: 0 auto;
@@ -365,6 +364,8 @@ $photo-padding-xl: $padding/2 !default;
 			max-width: 100%;
 			min-height: 0;
 			opacity: 0;
+			object-fit: contain;
+			font-family: 'object-fit: contain';
 			width: auto;
 
 			position: absolute;
